More panel animation changes to try to fix jerk on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,9 +456,8 @@ body {
     }
 
     >input[type="checkbox"]:checked~.content {
-        overflow: visible;
         max-height: 500px;
-        padding: 15px;
+        padding-block: 15px;
     }
 
     >input[type="checkbox"]:checked~.handle {
@@ -500,9 +499,10 @@ body {
         border: 1px solid #00000022;
         border-radius: 0 0 10px 10px;
         border-top: 0;
-        padding: 0 0 0 15px;
+        padding-block: 0;
+        padding-inline: 15px;
         max-height: 0;
         overflow: hidden;
-        transition: max-height 0.3s ease-out, padding 0.3s ease-out;
+        transition: max-height 0.3s ease-out, padding-block 0.3s ease-out;
     }
 }
